--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,10 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  date_util: ^0.1.4
+  charts_flutter: ^0.10.0
+  firebase_core: ^0.5.0+1
+  firebase_database: ^4.1.1
   google_fonts: ^2.0.0
   flutter:
     sdk: flutter
